--- a/src/components/charInfo/charInfo.scss
+++ b/src/components/charInfo/charInfo.scss
@@ -16,6 +16,10 @@
         .skeleton {
             margin-top: 30px;
         }
+        &_wrapper {
+            display: flex;
+            flex-direction: column;
+        }
     }
     &__basics {
         display: grid;
